Java reflection changes in Java 16